k8s/cluster-apps/changedetectionio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
  labels:
    app: changedetection
    app.kubernetes.io/name: changedetection
spec:
  selector:
    matchLabels:
      app: changedetection
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: changedetection
        app.kubernetes.io/name: changedetection
    spec:
      containers:
        - name: playwright-chrome
          image: browserless/chrome:latest@sha256:57d19e414d9fe4ae9d2ab12ba768c97f38d51246c5b31af55a009205c136012f
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
        - name: selenium
          image: selenium/standalone-chrome:latest@sha256:7efe71e7e4a83bdf574b26bd354690928075e8f443223d2ced16a2c208eae1d7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4444
          volumeMounts:
            - name: shm
              mountPath: /dev/shm
        - name: changedetection
          image: ghcr.io/dgtlmoon/changedetection.io:latest@sha256:34df3680db1cbffc45ac1e9c1514bc0507dd0c5b5fde47d1992fe6f14a7b40e4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - name: datastore
              mountPath: /datastore
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: datastore
          hostPath:
            path: /config/changedetection
            type: DirectoryOrCreate
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 2048Mi
      restartPolicy: Always
