k8s/cluster-apps/changedetectionio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  namespace: default
spec:
  selector:
    app: changedetection
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
