k8s/cluster-apps/changedetectionio/custom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
  namespace: default
  labels:
    app: changedetection
spec:
  selector:
    matchLabels:
      app: changedetection
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: changedetection
    spec:
      containers:
        - name: playwright-chrome
          image: browserless/chrome:latest@sha256:51c4304ea55d95a8f44a16c7e890ec6218246e8bef5ca5f9027866fd4aef365a
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
        - name: selenium
          image: selenium/standalone-chrome:latest@sha256:110a6571a46ed188a7c067312c7c63fa039c7be29a723228ab2befbe039f6d22
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4444
          volumeMounts:
            - name: shm
              mountPath: /dev/shm
        - name: changedetection
          image: ghcr.io/dgtlmoon/changedetection.io:latest@sha256:e1cff3791d2089747031b229fa54001670501d38e39a2413fbccc5973431729e
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: datastore
              mountPath: /datastore
      volumes:
        - name: datastore
          hostPath:
            path: /datastore/config/changedetection
            type: DirectoryOrCreate
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 2048Mi
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - changedetection.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: changedetection.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection
                port:
                  name: http
---
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  namespace: default
spec:
  selector:
    app: changedetection
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
