k8s/cluster-apps/changedetectionio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - changedetection.k8s.javydekoning.com
      secretName: javydekoning-com-tls
  rules:
    - host: changedetection.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection
                port:
                  name: http
